--- a/trainingdb/Dockerfile
+++ b/trainingdb/Dockerfile
@@ -2,7 +2,7 @@ FROM postgres:9.4
 MAINTAINER LHX
 
 # add the seed data to open_lmis
-ENV POSTGRES_HOST postgres
+ENV POSTGRES_HOST trainingdb
 ENV POSTGRES_DB open_lmis
 ENV POSTGRES_USER openlmis
 ENV POSTGRES_PASSWORD hello123
