--- a/trainingdb/Dockerfile
+++ b/trainingdb/Dockerfile
@@ -6,5 +6,7 @@ ENV POSTGRES_HOST trainingdb
 ENV POSTGRES_DB open_lmis
 ENV POSTGRES_USER openlmis
 ENV POSTGRES_PASSWORD hello123
+
+#the file dumpForTraining.sql must add manually
 COPY dumpForTraining.sql /docker-entrypoint-initdb.d/
 
